syntax = "proto3";

package messagequeue.meta;

option java_package = "com.arnold.msg.proto.data";
option java_outer_classname = "DataServiceProto";
option java_multiple_files = true;

import "common.proto";

service DataService {
  rpc Produce(ProduceRequest) returns (ProduceResponse);
  rpc Consume(ConsumeRequest) returns (ConsumeResponse);
  rpc Acknowledge(AcknowledgeRequest) returns (AcknowledgeResponse);
}

message ProduceRequest {
  string producer = 1;
  repeated MessageProto messages = 2;
}

message ProduceResponse {
  bool success = 1;
}

message ConsumeRequest {
  string consumer = 1;
  string queue = 2;
}

message ConsumeResponse {
  string batch_id = 1;
  repeated MessageProto messages = 2;
}

message AcknowledgeRequest {
  string batch_id = 1;
}

message AcknowledgeResponse {
  bool success = 1;
}

message MessageProto {
  string message_id = 1;
  string queue = 2;
  bytes payload = 3;
  map<string, string> headers = 4;
}
